--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@huggingface/inference": "^4.13.4",
+    "@monaco-editor/react": "^4.7.0",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@octokit/rest": "^21.1.1",
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -23,11 +26,14 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "diff": "^8.0.2",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
+    "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "^18.3.1",
+    "react-lottie-player": "^2.1.0",
     "recharts": "^3.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -37,9 +43,10 @@
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.22",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8.4.41",
+    "postcss": "^8.5.6",
     "prisma": "^5.18.0",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
